feat: add separate table for configmap content. Closes #14